Fix spinner not showing. Add some custom css to login-register.css

--- a/src/client/we-connect/src/components/post/index.module.css
+++ b/src/client/we-connect/src/components/post/index.module.css
@@ -5,6 +5,7 @@
   max-width: 500px;
   height: 50%;
   margin: auto;
+  margin-bottom: 20px;
 }
 
 .card:hover {
