--- a/src/client/we-connect/src/components/posts/index.module.css
+++ b/src/client/we-connect/src/components/posts/index.module.css
@@ -1,5 +1,5 @@
 .posts-container{
-    padding: 40px;
-    padding-bottom: 60px;
+    margin: 30px;
+    margin-bottom: 70px;
     justify-content: center;
 }
